# spacetraderio

./: .gitignore  Cargo.toml  README.md
src/: apis.rs  lib.rs  main.rs  models.rs  screen.rs
src/apis/: agent.rs  config.rs  contracts.rs  errors.rs  factions.rs  fleet_api.rs  myagent.rs  ships.rs  systems.rs
src/generated-code/apis/: agents_api.rs  contracts_api.rs  default_api.rs  factions_api.rs  fleet_api.rs  systems_api.rs
src/models/: agent.rs  chart.rs  connectedsystem.rs  contract.rs  contractdelivergood.rs  contractpayment.rs  contractterms.rs  cooldown.rs  extraction.rs  extractionyield.rs  faction.rs  factiontrait.rs  jumpgate.rs  market.rs  markettradegood.rs  markettransaction.rs  message.rs  meta.rs  scannedship.rs  scannedsystem.rs  scannedwaypoint.rs  ship.rs  shipcargo.rs  shipcargoitem.rs  shipcondition.rs  shipcrew.rs  shipengine.rs  shipframe.rs  shipfuel.rs  shipmodule.rs  shipmount.rs  shipnav.rs  shipnavflightmode.rs  shipnavroute.rs  shipnavroutewaypoint.rs  shipnavstatus.rs  shipreactor.rs  shipregistration.rs  shiprequirements.rs  shiprole.rs  (+17 more)
src/old-models/: agent.rs  cooldown.rs  extraction.rs  extractionyield.rs  jumpgate.rs  market.rs  markettradegood.rs  markettransaction.rs  meta.rs  models.rs  shipengine.rs  shipnavroute.rs  shipnavroutewaypoint.rs  systemwaypoint.rs  tradegood.rs  waypoint.rs
stapi/: Cargo.toml
stapi/src/: apis.rs
stapi/src/apis/: config.rs  contracts.rs
stapi/src/models/: chart.rs  cooldown.rs  extraction.rs  faction.rs  jumpgate.rs  (+18 more)
stmain/: Cargo.toml
stui/: Cargo.toml
stui/src/: lib.rs  main.rs
