[package]
name = "stmain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stapi = { path = "../stapi"}
stui = {path = "../stui"}
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde"] }
tokio = { version = "1.28.1", features = ["full"] }
serde_path_to_error = "0.1"
console_engine = "2.6.0"
[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]
